# Nqueen

./: .gitignore  .gitignoregit  CMakeLists.txt  README.md  main.cpp
source/src/common/: Types.h
source/src/core/: NQueensSolver.cpp
source/src/ui/: ChessboardWidget.cpp  ChessboardWidget.h  MainWindow.cpp
src/common/: Config.h
src/core/: NQueensSolver.h
src/ui/: MainWindow.h
